2005-06-17  Carl Worth  <cworth@cworth.org>

	* src/cairo-xcb-surface.c (_get_image_surface): Remove references
	to repeat and matrix fields that no longer exist.

2005-06-17  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xcb-surface.c (_get_image_surface)
	* src/cairo-xlib-surface.c (_get_image_surface): Fix 
	width/height typo.

2005-06-17  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo-glitz-surface.c: (_cairo_glitz_surface_get_image):
	* src/cairo-pattern.c: (cairo_pattern_create_for_surface):
	* src/cairo-pdf-surface.c: (_cairo_pdf_surface_composite_pdf):
	* src/cairo-surface.c: (_cairo_surface_init):
	* src/cairo-xlib-surface.c: (_get_image_surface):
	* src/cairoint.h: Remove matrix, filter and repeat from the
	cairo_surface_t struct.

2005-06-17  Carl Worth  <cworth@cworth.org>

	* src/cairo.c: (cairo_reference), (cairo_destroy): cairo_reference
	and cairo_destroy shouldn't behave differently when cr->status
	indicates an error. Fix this bug that just slipped back in.

	* src/cairo.c: (cairo_restore): Remove useless conditional return
	at the end of a void function.

	* src/cairo.c: (cairo_get_source), (cairo_get_font_face),
	(cairo_text_extents), (cairo_show_text), (cairo_text_path):
	Fix so that after calling _cairo_error the most that any cairo
	entry function ever does is return a previously computed value.

2005-06-17  Kristian Høgsberg  <krh@redhat.com>

	* TODO: Remove the path clipping entry from the list.

2005-06-16  Carl Worth  <cworth@cworth.org>

	* src/cairo-private.h: Reorder fields of cairo_private_t to match
	initialization order.

	* src/cairo.c: (_cairo_error): Call error_notify callback if set.
	(cairo_create): Initialize error_notify callback to NULL.
	(cairo_set_error_notify): New function to allow the user to set
	an error notify callback.
	
	* src/cairo.h: New cairo_set_error_notify prototye.
	
	* test/.cvsignore:
	* test/Makefile.am:
	* test/error-notify.c: (toggle_status), (do_test), (main): New