@@ -44,9 +44,6 @@ struct _cairo {
 
     cairo_status_t status;
 
-    cairo_error_notify_func_t error_notify;
-    void *error_notify_closure;
-
     cairo_path_fixed_t path;
 
     cairo_gstate_t *gstate;
