@@ -46,8 +46,6 @@
 static const cairo_t cairo_nil = {
   (unsigned int)-1,		/* ref_count */
   CAIRO_STATUS_NO_MEMORY,	/* status */
-  NULL,				/* error_notify */
-  NULL,				/* error_notify_closure */
   { 				/* path */
     NULL, NULL,			/* op_buf_head, op_buf_tail */
     NULL, NULL,			/* arg_buf_head, arg_buf_tail */
@@ -92,9 +90,6 @@ _cairo_error (cairo_t *cr, cairo_status_t status)
 	    status <= CAIRO_STATUS_LAST_STATUS);
 
     cr->status = status;
-
-    if (cr->error_notify)
-	(cr->error_notify) (cr->error_notify_closure, status);
 }
 
 /**
@@ -142,9 +137,6 @@ cairo_create (cairo_surface_t *target)
     cr->ref_count = 1;
 
     cr->status = CAIRO_STATUS_SUCCESS;
-
-    cr->error_notify = NULL;
-    cr->error_notify_closure = NULL;
 
     _cairo_path_fixed_init (&cr->path);
 
@@ -2327,30 +2319,6 @@ cairo_status_to_string (cairo_status_t status)
     }
 
     return "<unknown error status>";
-}
-
-/**
- * cairo_set_error_notify:
- * @cr: a cairo context
- * @error_notify: an function to be called when an error occurs
- * @closure: a closure argument to be passed to @error_notify
- * 
- * Installs an error notifier within @cr. If an error is set within
- * @cr, (eg. such that cairo_status(@cr) would return something other
- * than CAIRO_STATUS_SUCCESS), then @error_notify will be called with
- * the given @closure value as well as the #cairo_status_t value of
- * the error.
- *
- * An error notifier can be cleared by passing NULL for @error_notify
- * and for @closure.
- **/
-void
-cairo_set_error_notify (cairo_t			 *cr,
-			cairo_error_notify_func_t error_notify,
-			void			 *closure)
-{
-    cr->error_notify = error_notify;
-    cr->error_notify_closure = closure;
 }
 
 void
